# RayTracing

./: CMakeLists.txt
1-OutputImage/: CMakeLists.txt  main.cpp
10-Dieletric_Material/: CMakeLists.txt  Hitable.h  main.cpp
11-Camera/: CMakeLists.txt  Sphere.h  main.cpp
12-MultiThread/: CMakeLists.txt  Util.h  Vec3.h  main.cpp
13-Scene/: CMakeLists.txt  DieletricMaterial.h  main.cpp
14-BVH/: AABB.h  CMakeLists.txt  Camera.h  Hitable.h  HitableList.h  Sphere.h  main.cpp
15-Texture/: BVHNode.h  CMakeLists.txt  DiffuseMaterial.h  HitableList.h  Material.h  Texture.h  main.cpp
16-PerlinNoise/: AABB.h  CMakeLists.txt  DiffuseMaterial.h  Hitable.h  MetalMaterial.h  Sphere.h  Texture.h  main.cpp
2-Vec3/: CMakeLists.txt  main.cpp
3-RayAndCamera/: CMakeLists.txt  Ray.h  main.cpp
4-AddingSphere/: CMakeLists.txt  main.cpp
5-SurfaceNormal/: CMakeLists.txt  Hitable.h  Ray.h  Sphere.h  main.cpp
6-Antialiasing/: CMakeLists.txt  main.cpp
7-Diffuse_GammaCorrect/: CMakeLists.txt  main.cpp
8-Diffuse_Material/: CMakeLists.txt  DiffuseMaterial.h  Material.h  main.cpp
9-Metal_Material/: CMakeLists.txt  HitableList.h  main.cpp
Output/: 06.ppm  10-DielectriMaterial.ppm  11-Camera.ppm  12-MultiThread.ppm  13-Scene.ppm  14-BVH.ppm  15-Texture.ppm  16-PerlinTexture.ppm  6-Antialiasing.ppm  7-Diffuse+GammaCorrect.ppm  7-Diffuse.ppm  8-DiffuseMaterial.ppm  9-MetalMaterial.ppm
